# sudoku_classifier

./: .gitignore  README.md  database.db  pyproject.toml
notebooks/: SVM.ipynb  data_analysis.ipynb  data_cleaning.ipynb  feature_engineering.ipynb  training.ipynb  training_binary.ipynb  training_easy_hard.ipynb  training_sudoku.ipynb  training_very_easy_medium_very_hard.ipynb  training_very_easy_very_hard.ipynb
src/: main.py
src/classifier/: training_loop.py
src/classifier/dataloader/: dataloader.py  puzzle_dataset.py
src/classifier/models/: conv_net.py  embedded_net.py  simple_net.py
src/services/: database.py  parser.py
src/services/scraper/: code_generator.py  logic_master_scraper.py  scraper.py  sudokupad_scraper.py
src/services/tables/: puzzles.py
