[tool.poetry]
name = "sudoku-classifier"
version = "0.1.0"
description = ""
authors = ["LeweLotki <stefanczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
numpy = "^2.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
torch = "^2.4.1"
nltk = "^3.9.1"
beautifulsoup4 = "^4.12.3"
selenium = "^4.25.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
