[tool.poetry]
name = "sudoku-classifier"
version = "0.1.0"
description = ""
authors = ["LeweLotki <stefanczyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
numpy = "1.26.4"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
torch = "^2.4.1"
nltk = "^3.9.1"
beautifulsoup4 = "^4.12.3"
selenium = "^4.25.0"
sqlalchemy = "^2.0.35"
webdriver-manager = "^4.0.2"
langdetect = "^1.0.9"
seaborn = "^0.13.2"
imblearn = "^0.0"
mord = "^0.7"
xgboost = "^2.1.1"
wordcloud = "^1.9.3"
gensim = "4.3.3"
transformers = "^4.45.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
